# RustLearning

cortex_test/: Cargo.toml  link.x
cortex_test/.cargo/: config.toml
cortex_test/src/: main.rs
guessing_game/src/: main.rs
rp2040_hello/: Cargo.toml  blinky.elf  blinky.rs  memory.x  uart.rs
rp2040_hello/.cargo/: config.toml
