[package]
name = "rp2040_hello"
version = "0.1.0"
edition = "2021"

[dependencies]
cortex-m = "0.7.7"
cortex-m-rt = "0.7.3"
embedded-hal = { version = "1.0.0" }

defmt = "0.3"
defmt-rtt = "0.4"
panic-probe = { version = "0.3", features = ["print-defmt"]}

rp2040-hal = { version = "0.10.0", features = ["critical-section-impl"] }
panic-halt = "0.2.0"
rp2040-boot2 = "0.3.0"

fugit = "0.3.6"

critical-section = { version = "1.1" }
rp2040-pac = { version = "0.6.0", features = ["critical-section"] }

[[bin]]
name = "blinky"
path = "blinky.rs"

[[bin]]
name = "uart"
path = "uart.rs"
